# negative_weight_SSSP

./: CMakeLists.txt  README.md  build.sh  build_debug.sh  build_reldeb.sh
data/experiments/: bad_bcf_bfct_1_2.csv  bad_bcf_dfs_1_2.csv  bad_bcf_gor_1_2.csv  bad_bcf_rd1_1_2.csv  bad_bcf_rd2_1_2.csv  bad_gor_bfct_1_2.csv  bad_gor_dfs_1_2.csv  bad_gor_gor_1_2.csv  bad_gor_rd1_1_2.csv  bad_gor_rd2_1_2.csv  bcf_gor.csv  debug_test.csv  diam_bfct_0_1.csv  diam_bfct_0_2.csv  diam_bfct_0_3.csv  diam_bfct_0_4.csv  diam_bfct_0_5.csv  diam_bfct_0_6.csv  diam_bfct_1_1.csv  diam_bfct_1_2.csv  diam_bfct_1_3.csv  diam_bfct_1_4.csv  diam_bfct_1_5.csv  diam_bfct_1_6.csv  diam_dfs_0_1.csv  diam_dfs_0_2.csv  diam_dfs_0_3.csv  diam_dfs_0_4.csv  diam_dfs_0_5.csv  diam_dfs_0_6.csv  diam_dfs_1_1.csv  diam_dfs_1_2.csv  diam_dfs_1_3.csv  diam_dfs_1_4.csv  diam_dfs_1_5.csv  diam_dfs_1_6.csv  diam_gor_0_1.csv  diam_gor_0_2.csv  diam_gor_0_3.csv  diam_gor_0_4.csv  (+842 more)
data/graphs/: negative1.txt  negative2.txt  negativea2.txt  positive-big.txt  positive.txt  rand-rest-100.txt  rand-rest-1000.txt  rand-rest-300.txt  rand-rest-500.txt  rand-rest-600.txt  rand-rest-700.txt  rand-rest-hard-400.txt  rand-rest-simple.txt  random1.txt  random2.txt  randrestricted1.txt  randrestricted2.txt  randrestricted4.txt  randrestricted4_nosource.txt  simple-scc.txt  simple1.txt  simple2.txt
data/queries/: bad_bcf_vs_gor_queries.txt  diam_queries.txt  kfact_queries.txt  norm_bcf_vs_gor_queries.txt  randl_queries.txt  (+5 more)
scripts/: HOWTO.md  auto_exp.py  auto_plots_tabs.py  big_graph_creator.sh  big_graph_creator_dag.sh  create_base_graphs.sh  create_graph.py  create_shift.sh  create_shift_from_aug.txt  create_sshift.sh  create_usa.sh  exec_query.py  exp_plots.py  from_dimacs.py  min_mean_cycle.py
src/: algorithms.cpp  algorithms.h  bcf.cpp  bcf.h  config.cpp  config.h  create_graph.cpp  defs.h  gor.c  gor.cpp  gor.h  graph.cpp  graph.h  heap.h  main.cpp  measurement_tool.h  measurements.h  parser_dh.h  permutations.h  queries.cpp  queries.h  runtime_tests.cpp  types_gor.h  unit_tests.cpp
